# trading-opportunity-agent

./: .gitignore  INDEX.md  LESSONS.md  README.md  SCHEDULES.md  lessons.yaml  pyproject.toml
.claude/: settings.json
.memsearch/memory/: 2026-06-22.md  2026-06-23.md  2026-06-24.md
config/: postmortem.json  research.json  schedules.json  scout.json
contracts/: dossier-schema.md  market-data-contract.md
lib/: cli.py  dedup.py  dossier.py  index.py  ledger.py  lessons.py  marketdata.py  pnl.py
opportunities/2026-06-22-oil-iran-talks/: dossier.md
opportunities/2026-06-25-constellation-q1-fy27/: dossier.md  simulation.md  transcript.md
opportunities/2026-06-25-may-pce/: dossier.md  transcript.md
opportunities/2026-06-25-nike-q4-fy26/: dossier.md  postmortem.md  simulation.md  transcript.md
opportunities/2026-06-26-delta-q2-fy26/: dossier.md  postmortem.md  simulation.md  transcript.md
opportunities/2026-06-26-jpmorgan-q2-fy26/: dossier.md  transcript.md
ops/: _manifest_eand_vodafone.json  _manifest_lockheed_ultra_maritime.json  _manifest_mobility_global_spinoff.json  _manifest_netflix_q2_fy26.json  _manifest_nike_ieepa_tariff_refund.json  com.oren.toa.research-debate.plist  com.oren.toa.scout-news.plist  com.oren.toa.simulate-due.plist  write_research.py
personas/: bear.md  bull.md  critic.md  investigator.md  quant.md
tests/: test_cli.py  test_config.py  test_dedup.py  test_dossier.py  test_index.py  test_ledger.py  test_lessons.py  test_marketdata.py  test_personas.py  test_pnl.py  test_readme.py  test_schedules.py  test_skills_present.py
(+1093 files in other folders)
