[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-opportunity-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
toa = "lib.cli:main"

[tool.setuptools]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
